Update class name for two-columns to dos-columnas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             src="https://www.recetasnestle.com.co/sites/default/files/styles/recipe_detail_desktop/public/srh_recipes/59546278e1f6b372bf8715160f300b56.webp?itok=Npk2DDGs"
           />
         </header>
-        <div class="two-columns">
+        <div class="dos-columnas">
           <section class="rojizo">
             <h3>Ingredientes</h3>
             <ul>
